<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_meeting_history"
            android:icon="@drawable/ic_history"
            android:title="@string/meeting_history" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_calendar"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>

</menu>
