<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    android:layout_gravity="center"
    app:cardCornerRadius="5dp"
    app:cardElevation="0sp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/join_a_meeting"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutCode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_code"
            app:boxStrokeColor="@color/divider"
            app:boxStrokeWidth="1dp"
            android:layout_marginTop="10dp"
            app:errorTextColor="@color/error"
            android:textColorHint="@color/secondaryText"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="11"
                android:textColor="@color/primaryText"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:boxStrokeColor="@color/divider"
            app:boxStrokeWidth="1dp"
            android:layout_marginTop="10dp"
            app:errorTextColor="@color/error"
            android:textColorHint="@color/secondaryText"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:textColor="@color/primaryText"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                app:backgroundTint="@color/white"
                app:strokeWidth="1.5dp"
                app:strokeColor="@color/colorPrimary"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/join"
                android:textColor="@color/white"
                app:rippleColor="@color/colorPrimaryRipple"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>