<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    android:layout_gravity="center"
    app:cardCornerRadius="5dp"
    app:cardElevation="0sp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/meeting_saved"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="left|center"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/primaryText"
                    android:textSize="14sp"
                    android:id="@+id/txtName"
                    android:text="My Meet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp"
                    android:id="@+id/txtDate"
                    android:text="00:00"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp"
                    android:id="@+id/txtTime"
                    android:layout_marginTop="3dp"
                    android:text="00:00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCalendar"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/add_to_calendar"
                android:textColor="@color/colorPrimary"
                app:backgroundTint="@color/white"
                app:strokeWidth="1.5dp"
                android:textAllCaps="false"
                app:strokeColor="@color/colorPrimary"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                app:rippleColor="@color/colorPrimaryRipple"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="20dp" />


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>