<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="1dp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/select_image"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_close" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingTop="20dp"
            android:paddingRight="12dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:id="@+id/llCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_camera_pick"
                    android:backgroundTint="@color/secondaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/from_camera"
                    android:textColor="@color/secondaryText" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider" />

            <LinearLayout
                android:id="@+id/llGallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_gallery"
                    android:backgroundTint="@color/secondaryText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/pick_from_gallery"
                    android:textColor="@color/secondaryText" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>