<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBg">

    <RelativeLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_above="@+id/llLogin"
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_height="match_parent">

            <LinearLayout
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/video_call"
                    app:lottie_repeatMode="reverse" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    app:boxStrokeColor="@color/divider"
                    app:boxStrokeWidth="1dp"
                    android:layout_marginTop="10dp"
                    app:errorTextColor="@color/error"
                    android:textColorHint="@color/secondaryText"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="50"
                        android:textColor="@color/primaryText"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:boxStrokeColor="@color/divider"
                    app:boxStrokeWidth="1dp"
                    android:layout_marginTop="10dp"
                    app:errorTextColor="@color/error"
                    android:textColorHint="@color/secondaryText"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:textColor="@color/primaryText"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/divider"
                    app:boxStrokeWidth="1dp"
                    app:errorTextColor="@color/error"
                    android:textColorHint="@color/secondaryText"
                    android:layout_marginTop="10dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/secondaryText"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:textColor="@color/primaryText"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="5dp"
                    app:rippleColor="@color/colorPrimaryRipple" />

                <TextView
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/secondaryText"
                    android:text="OR continue with"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btnGoogleSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/buttonFacebookLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="By signing up, you agree to our Terms and that you have read our privacy policy."
                    android:textSize="10sp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_have_account"
                android:textAllCaps="true"
                android:textColor="@color/colorAccentRipple"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>


    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
